# statictool

./: CMakeLists.txt  CMakePresets.json
includes/: OS_API_List.txt
src/: ApiDifferentiator.cpp  ApiDifferentiator.h  FileHandler.cpp  FileHandler.h  main.cpp
